Fix logic for timing.

Addresses PR/57436.

XXX pullup-10.